span not working

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <details>
         <summary>Filters
             <button id="veggiefilter"> vegetarian</button>
-        <button id="non
+            <button id="non
 Allergens"> nonallergens</button>
-        <button id="nonAlcholic"> non alcoholic</button></summary>
+            <button id="nonAlcholic"> non alcoholic</button></summary>
 
     </details>
 
@@ -42,6 +42,9 @@ Allergens"> nonallergens</button>
                 <article class="product">
                     <h4 class="soldout"></h4>
                     <img src="https://kea-alt-del.dk/t5/site/imgs/small/rodbede-cabanossi-sm.jpg" alt="" />
+                    <p>
+                            <span></span>
+                        </p>
                     <section class="productbody">
                         <div class="align">
                             <h3 class="data_name">Dish Name</h3>
@@ -51,10 +54,7 @@ Allergens"> nonallergens</button>
                             <h4 class="data_price"></h4>
                             <h4 class="data-discount">DISC</h4>
                         </div>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Voluptatum, velit inventore. Architecto nihil quis temporibus aut.
-                        </p>
+
 
 
                         <button>See details</button>
@@ -67,6 +67,15 @@ Allergens"> nonallergens</button>
     <footer>
         <p>Copyright &copy; </p>
     </footer>
-
+    <div class="modal-background hide">
+        <div class="modal-content">
+            <h3 class="modal-name">NAME</h3>
+            <img src="" alt="" class="modal-image" />
+            <p class="modal-description">LONG DESCRIPTION</p>
+            <h4 class="modal-price">PRICE</h4>
+        </div>
+    </div>
     <script src="js/petrograd.js"></script>
-</body></html>
+</body>
+
+</html>
