ShowProduct function fixed

--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
     <header id="header">
         <nav>
             <a href="#">Petrograd</a>
-
-            <a href="#starter">Starter</a>
-            <a href="#main">Main</a>
         </nav>
     </header>
     <details>
@@ -42,19 +39,21 @@ Allergens"> nonallergens</button>
                 <article class="product">
                     <h4 class="soldout"></h4>
                     <img src="https://kea-alt-del.dk/t5/site/imgs/small/rodbede-cabanossi-sm.jpg" alt="" />
-                    <p>
-                            <span></span>
-                        </p>
                     <section class="productbody">
                         <div class="align">
                             <h3 class="data_name">Dish Name</h3>
                             <img src="veggieIcon.png" class="vegetarian hidden">
+                            <img src="alcoholIcon.png" class="alcohol hidden">
+                            <img src="laktose.png" class="laktose hidden">
+
                         </div>
                         <div class="align2">
                             <h4 class="data_price"></h4>
                             <h4 class="data-discount">DISC</h4>
                         </div>
-
+                        <p>
+                            <span></span>
+                        </p>
 
 
                         <button>See details</button>
