--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@ Allergens"> nonallergens</button>
                     <section class="productbody">
                         <div class="align">
                             <h3 class="data_name">Dish Name</h3>
+                            <img class="laktose hidden"src="laktose.png" >
                             <img src="veggieIcon.png" class="vegetarian hidden">
                             <img src="alcoholIcon.png" class="alcohol hidden">
-                            <img src="laktose.png" class="laktose hidden">
+
 
                         </div>
                         <div class="align2">
