--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Restaurant Petrograd</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Domine:wght@700&display=swap" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="css/custom.css" rel="stylesheet" />
 </head>
@@ -18,23 +19,24 @@
 <body>
     <!-- Navigation -->
     <header id="header">
+        <h1>Petrograd</h1>
         <nav>
-            <a href="#">Petrograd</a>
+
         </nav>
     </header>
     <details>
-        <summary>Filters
+        <summary>Filter By</summary>
             <button id="veggiefilter"> vegetarian</button>
             <button id="non
 Allergens"> nonallergens</button>
-            <button id="nonAlcholic"> non alcoholic</button></summary>
+            <button id="nonAlcholic"> non alcoholic</button>
 
     </details>
 
     <!-- Page Content -->
 
     <main class="productlist">
-        <section id="starter">
+        <section>
             <template id="productTemplate">
                 <article class="product">
                     <h4 class="soldout"></h4>
