--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 
                 <article class="product">
                     <h4 class="soldout"></h4>
-                    <img src="https://kea-alt-del.dk/t5/site/imgs/small/rodbede-cabanossi-sm.jpg" alt="" />
+                    <img alt="dish photo"src="https://kea-alt-del.dk/t5/site/imgs/small/rodbede-cabanossi-sm.jpg" alt="" />
                     <section class="productbody">
                         <div class="align">
                             <h3 class="data_name"> </h3>
-                            <img src="img/veggieIcon.png" class="vegetarian hidden">
-                            <img src="img/alcoholIcon.png" class="alcohol hidden">
+                            <img alt="vegetarian product" src="img/veggieIcon.png" class="vegetarian hidden">
+                            <img alt="this product contains alchol"src="img/alcoholIcon.png" class="alcohol hidden">
 
 
                         </div>
